--- a/discovery-server/pom.xml
+++ b/discovery-server/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>discovery-server</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>discovery-server</name>
-    <description>Demo project for Spring Boot</description>
+    <description>Discovery server for Spring Boot</description>
     <properties>
         <java.version>1.8</java.version>
         <spring-cloud.version>Hoxton.RC1</spring-cloud.version>
